tests/invalid/random_shuffle_wrong_arg_count/main.py
import random


def run_case() -> None:
    xs: list[int] = [1, 2, 3]
    random.shuffle(xs, xs)


if __name__ == "__main__":
    run_case()
